--- a/src/app/shared/layout/modals/register-modal/parts/login-data/login-data.component.scss
+++ b/src/app/shared/layout/modals/register-modal/parts/login-data/login-data.component.scss
@@ -1,9 +1,270 @@
+.tooltip {
+ z-index: 9999999999;
+}
+
+
+h3 {
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 25px;
+}
+
+.modal-dialog {
+    max-width: 600px;
+    display: flex;
+    justify-content: center;
+}
+
+.modal-header {
+    border-bottom-color: var(--foreground);
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.btn-close {
+    margin-right: 10px;
+    background: none;
+}
+
+.close-modal-ativacao{
+    border-radius: 100%;
+    position: absolute;
+    display: flex;
+    top: 4px;
+    right: 5px;
+    cursor: pointer;
+    padding-top: 3px;
+    padding-right: 5px;
+}
+
+.close-modal-ativacao i{
+    margin: 10px;
+    color: var(--highlight);
+    font-size: 22px;
+}
+
+.modal-body {
+    padding: 16px 60px;
+}
+
+.logo {
+    max-width: 175px;
+    max-height: 140px;
+}
+
+button {
+    margin: 0 auto;
+    width: 100%;
+}
+
+.space-buttons {
+    display: block;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.text-line {
+    height: 1px;
+    margin: 30px 0;
+    background-color: var(--foreground);
+    text-align: center;
+}
+
+.text-line span {
+    background-color: var(--background);
+    position: relative;
+    top: -0.65em;
+    padding: 0 10px;
+}
+
+asl-google-signin-button {
+    display: flex;
+    justify-content: center;
+}
+
+.limpar-social-form {
+    cursor: pointer;
+    display: block;
+    margin-top: 20px;
+    text-align: center;
+    text-decoration: none;
+    color: var(--highlight);
+}
+
+.showPassword {
+    position: absolute;
+    top: calc(50% - 16px);;
+    right: 0;
+    color: var(--foreground-inputs-odds);
+    cursor: pointer;
+    padding: 10px;
+}
+
 a.link-termos-politica {
     cursor: pointer;
     text-decoration: underline;
     color: var(--highlight);
 }
 
-.tooltip {
- z-index: 9999999999;
+.text-muted {
+    color: var(--foreground) !important;
+    opacity: 65%;
+}
+
+.content-modal-ativacao{
+    display: flex;
+    flex-direction: column;
+    margin: 25px;
+    text-align: center;
+}
+
+.content-modal-ativacao img{
+    width: 100px;
+    height: auto;
+    align-self: center;
+    margin: 20px
+}
+
+.login {
+    font-size: 12px;
+    margin-top: 25px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.login a {
+    cursor: pointer;
+    text-decoration: underline;
+    color: var(--highlight);
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: var(--background);
+    padding: 20px;
+    border-radius: 4px;
+    width: 100%;
+    max-width: 450px;
+    text-align: center;
+}
+
+.modal-title {
+    color: #ffff;
+    font-family: 'Open Sans', 'sans-serif';
+    font-weight: 600;
+    font-size: 24px;
+    margin-top: 30px;
+    margin-bottom: 5px;
+}
+
+.bars {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+    align-self: stretch;
+}
+
+.strong-bar-one, .strong-bar-two, .strong-bar-three {
+    border:  1px solid gray;
+    width: 33%;
+    background-color: gray;
+    border-radius: 29;
+}
+
+#container-tooltip {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 8px;
+    margin: 0;
+    padding: 8px;
+    padding-bottom: 4px;
+    list-style-type: none;
+}
+
+.requirements-password {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    width: 100%;
+}
+
+.fulfilled {
+    color: green;
+    text-decoration: line-through;
+    border-radius: 5px;
+}
+
+.weak .strong-bar-two,
+.weak .strong-bar-three {
+    border:  1px solid gray;
+    background-color: gray;
+    color: gray;
+}
+
+.weak .strong-bar-one {
+    border:  1px solid red;
+    background-color: red;
+    color: red;
+}
+
+.medium .strong-bar-three {
+    border:  1px solid gray;
+    background-color: gray;
+    color: gray;
+}
+
+.medium .strong-bar-one,
+.medium .strong-bar-two {
+    border:  1px solid yellow;
+    background-color: yellow;
+    color: yellow;
+}
+
+.strong .strong-bar-one,
+.strong .strong-bar-two,
+.strong .strong-bar-three {
+    border:  1px solid green;
+    background-color: green;
+    color: green;
+
+}
+
+.unfulfilled {
+    opacity: 0.6;
+}
+
+@media only screen and (max-width: 1024px) {
+    .modal-body {
+        padding: 40px 25px 15px;
+
+        display: flex;
+        flex-direction: column;
+    }
+
+    .modal-header {
+        border-bottom-color: var(--foreground);
+        padding: 20px 25px;
+    }
+
+    .modal-body .modal-body-content {
+        flex: 1;
+    }
+}
+
+.grecaptcha-badge {
+    visibility: hidden;
 }
