--- a/src/app/shared/layout/modals/register-modal/parts/address-data/address-data.component.html
+++ b/src/app/shared/layout/modals/register-modal/parts/address-data/address-data.component.html
@@ -51,7 +51,7 @@
                                 class="form-control inverted-out input-style label-personalized"
                                 formControlName="complemento" [ngClass]="applyCssInputError('complemento')"
                                 placeholder="" inputmode="text">
-                            <label for="complemento" class="text-input">{{'geral.complemento' | translate}}</label>
+                            <label for="complemento" class="text-input">{{'geral.complement' | translate}}</label>
                         </div>
                         <app-error-msg [control]="form.get('complemento')" label="Complemento"
                             class="text-left"></app-error-msg>
