--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -145,7 +145,7 @@
                                             <div class="min-amount">
                                                 <i class="fa-solid fa-circle-exclamation"></i>&nbsp;
                                                 {{'saques.minimumWithdrawal' | translate}}: {{valorMinSaque | currency}}
-                                                / {{'saques.maximumWithdrawal' | translate}}: {{maximumWithdrawal | currency}}
+                                                / {{'saques.maximumWithdrawalAmount' | translate}}: {{maximumWithdrawalAmount | currency}}
                                                 / {{'saques.dailyMaximum' | translate}}: {{valorMaxSaqueDiario | currency}}
                                                 / {{'saques.monthlyMaximum' | translate}}: {{valorMaxSaqueMensal | currency}}
                                             </div>
